--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,14 +3,14 @@
     <head>
         {{- partial "head/head.html" . -}}
         {{- block "head" . -}}{{ end }}
-        <!-- <style>
+        <style>
             body {
                 -webkit-user-select: none; /* Safari */
                 -moz-user-select: none; /* Firefox */
                 -ms-user-select: none; /* IE 10+ */
                 user-select: none; /* Standard syntax */
             }
-        </style> -->
+        </style>
     </head>
     <body class="{{ block `body-class` . }}{{ end }}">
         {{- partial "head/colorScheme" . -}}
