--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}" dir="{{ default `ltr` .Language.LanguageDirection }}">
-    <head>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1D5K0VNC1Y"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
+<html
+  lang="{{ .Site.LanguageCode }}"
+  dir="{{ default `ltr` .Language.LanguageDirection }}"
+>
+  <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1D5K0VNC1Y"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-            gtag('config', 'G-1D5K0VNC1Y');
-        </script>
-        <style>
-            body {
-                -webkit-user-select: none; /* Safari */
-                -moz-user-select: none; /* Firefox */
-                -ms-user-select: none; /* IE 10+ */
-                user-select: none; /* Standard syntax */
-            }
-        </style>
-        {{- partial "head/head.html" . -}}
-        {{- block "head" . -}}{{ end }}
-    </head>
-    <body class="{{ block `body-class` . }}{{ end }}">
-        {{- partial "head/colorScheme" . -}}
-
-        {{/* The container is wider when there's any activated widget */}}
-        {{- $hasWidget := false -}}
-        {{- range .Site.Params.widgets -}}
-            {{- if gt (len .) 0 -}}
-                {{- $hasWidget = true -}}
-            {{- end -}}
-        {{- end -}}
-        <div class="container main-container flex on-phone--column {{ if $hasWidget }}extended{{ else }}compact{{ end }}">
-            {{- block "left-sidebar" . -}}
-                {{ partial "sidebar/left.html" . }}
-            {{- end -}}
-            {{- block "right-sidebar" . -}}{{ end }}
-            <main class="main full-width">
-                {{- block "main" . }}{{- end }}
-            </main>
-        </div>
-        <script>
-            window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-        </script>
-        <script defer src="/_vercel/speed-insights/script.js"></script>
-        <script>
-            window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-        </script>
-        <script defer src="/_vercel/insights/script.js"></script>
-        {{ partial "footer/include.html" . }}
-    </body>
+      gtag("config", "G-1D5K0VNC1Y");
+    </script>
+    <style>
+      body {
+        -webkit-user-select: none; /* Safari */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* IE 10+ */
+        user-select: none; /* Standard syntax */
+      }
+    </style>
+    {{- partial "head/head.html" . -}} {{- block "head" . -}}{{ end }}
+  </head>
+  <body class="{{ block `body-class` . }}{{ end }}">
+    {{- partial "head/colorScheme" . -}} {{/* The container is wider when
+    there's any activated widget */}} {{- $hasWidget := false -}} {{- range
+    .Site.Params.widgets -}} {{- if gt (len .) 0 -}} {{- $hasWidget = true -}}
+    {{- end -}} {{- end -}}
+    <div
+      class="container main-container flex on-phone--column {{ if $hasWidget }}extended{{ else }}compact{{ end }}"
+    >
+      {{- block "left-sidebar" . -}} {{ partial "sidebar/left.html" . }} {{- end
+      -}} {{- block "right-sidebar" . -}}{{ end }}
+      <main class="main full-width">{{- block "main" . }}{{- end }}</main>
+    </div>
+    <script>
+      window.si =
+        window.si ||
+        function () {
+          (window.siq = window.siq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
+    <script>
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
+    {{ partial "footer/include.html" . }}
+  </body>
 </html>
