--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,11 +4,11 @@
   dir="{{ default `ltr` .Language.LanguageDirection }}"
 >
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://blog.userwei.com/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://blog.userwei.com/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://blog.userwei.com/favicon-16x16.png" />
+    <link rel="icon" type="image/x-icon" href="https://blog.userwei.com/favicon.ico" />
+    <link rel="manifest" href="https://blog.userwei.com/site.webmanifest" />
     <!-- Google tag (gtag.js) -->
     <script
       async
