fix post and baseof

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,14 +23,14 @@
 
       gtag("config", "G-1D5K0VNC1Y");
     </script>
-    <style>
+    <!-- <style>
       body {
         -webkit-user-select: none; /* Safari */
         -moz-user-select: none; /* Firefox */
         -ms-user-select: none; /* IE 10+ */
         user-select: none; /* Standard syntax */
       }
-    </style>
+    </style> -->
     {{- partial "head/head.html" . -}} {{- block "head" . -}}{{ end }}
   </head>
   <body class="{{ block `body-class` . }}{{ end }}">
